Consume metrics and use them for auto-scaling - WIP
The autoscaler unit tests resort to white box testing to avoid races. Rather
than running receive and sampling loops, the autoscaler is told when to:
  * receive specific metrics, and
  * take a sample.

Limitations

The autoscaler will happily scale a function pod to 0 replicas in either of the following situations:
  * the input topic contains messages still to be processed,
  * the function is continuing to produce output messages.

--- a/function-controller/README.adoc
+++ b/function-controller/README.adoc
@@ -70,3 +70,17 @@ Then expose the `2345` port as a service, using `riff/config/delve/function-cont
 kubectl apply -f config/debug-service.yaml
 ----
 After restarting the `function-controller-...` pod, you can connect the debugger through `localhost:30102` (or `$(minikube ip):30102`).
+
+=== Generating Mocks
+
+Mocks can be regenerated as follows _and should then be checked in_:
+[source, bash]
+----
+make gen-mocks
+----
+
+You can verify that generated mocks which are committed or staged are up to date using:
+[source, bash]
+----
+make verify-mocks
+----
